force-app/main/default/objects/ssot__BenefitAssignment__dlm/fields/ssot__rel_1716726572927_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726572927_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitAssignment_BenefitId_map_Prog_rel</label>
    <referenceTo>ssot__ProgramBenefit__dlm</referenceTo>
    <relationshipLabel>BenefitAssignment_BenefitId_map_Prog_rel</relationshipLabel>
    <relationshipName>rel_1716726572927_end</relationshipName>
    <type>Lookup</type>
</CustomField>