force-app/main/default/objects/ssot__BenefitAssignment__dlm/fields/ssot__rel_1716726631652_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726631652_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitAssignment_ParentRecordId_map_rel</label>
    <referenceTo>ssot__ProgramEnrollment__dlm</referenceTo>
    <relationshipLabel>BenefitAssignment_ParentRecordId_map_rel</relationshipLabel>
    <relationshipName>rel_1716726631652_end</relationshipName>
    <type>Lookup</type>
</CustomField>